FlightPath 4.x Changelog
========================





-------  Beginning of 4.10-dev Branch ----------
  As part of coding for Morningside, I am creating this branch which will hopefully become integrated
  into the main 4.x branch, possibly as version 4.10 of FlightPath.



----------------
RELEASED 4.8.2
----------------


2015-10-14
  Added some logic to detect if, when editing a degree, the user enters a group twice with differing min grade
  or requirement types.  It will display a warning if so, as that can create a bug later on with calculations.
  
  Fixed a problem where a popup help dialog wasn't showing when adding a group to a degree.
  

2015-09-25
  Fixed small bugs relating to the audit module, and the exclusion of transfer credits from calculations.

  Added code to _FlightPath.php, so that when a coure requirement is fulfilled by a transfer requirement,
  it sets the requirement's bool_transfer to TRUE.


----------------
RELEASED 4.8.1
----------------


2015-09-17
  Added small changes to DegreePlan, CourseList, and Group, to support features in the new Audit module. Specifically, the ability
  to exclude transfer credits from points calculations, if desired.
  

2015-09-10
  Minor tweaks to style.css files in basic and classic (included) themes, to set page-content to white background for
  improved readibility on pages like the permissions page, where it might stretch past the page.

  Added option for viewing semi-permanent URLs for the blank degrees, to make them more accessible, and also
  to auto-set the catalog year to whatever the current one is set to.

----------------
RELEASED 4.8
----------------


2015-08-05
  Changed user module to allow entering of faculty advisees (to populate the advisor_student table)
  

2015-08-03
  Changed how form_render_element works, to add an inner wrapper which gets the error class, inside of the 
  prefix and suffix, if they exist.
  
  Changed user module to allow users to enter student's courses.

