@@ -335,14 +335,21 @@ CREATE TABLE `degrees` (
   `degree_id` int(11) NOT NULL DEFAULT '0',
   `major_code` varchar(20) NOT NULL DEFAULT '',
   `degree_type` varchar(20) NOT NULL DEFAULT '',
-  `degree_class` varchar(5) NOT NULL DEFAULT '',
+  `degree_level` varchar(5) NOT NULL DEFAULT '',
+  `degree_class` varchar(40) NOT NULL DEFAULT '',
   `title` varchar(200) NOT NULL DEFAULT '',
   `public_note` text,
   `semester_titles_csv` text,
   `catalog_year` int(11) NOT NULL DEFAULT '2006',
   `exclude` int(11) NOT NULL DEFAULT '0',
+  `allow_dynamic` int(11) NOT NULL DEFAULT '0',
   PRIMARY KEY (`id`),
-  KEY `degree_id` (`degree_id`)
+  KEY `degree_id` (`degree_id`),
+  KEY `major_code` (`major_code`),
+  KEY `degree_level` (`degree_level`),
+  KEY `degree_class` (`degree_class`),
+  KEY `allow_dynamic` (`allow_dynamic`),
+  KEY `catalog_year` (`catalog_year`)
 ); ";
 db_query($q);
 
@@ -408,14 +415,22 @@ CREATE TABLE `draft_degrees` (
   `degree_id` int(11) NOT NULL DEFAULT '0',
   `major_code` varchar(20) NOT NULL DEFAULT '',
   `degree_type` varchar(20) NOT NULL DEFAULT '',
-  `degree_class` varchar(5) NOT NULL DEFAULT '',
+  `degree_level` varchar(5) NOT NULL DEFAULT '',
+  `degree_class` varchar(40) NOT NULL DEFAULT '',
   `title` varchar(200) NOT NULL DEFAULT '',
   `public_note` text,
   `semester_titles_csv` text,
   `catalog_year` int(11) NOT NULL DEFAULT '2006',
   `exclude` int(11) NOT NULL DEFAULT '0',
+  `allow_dynamic` int(11) NOT NULL DEFAULT '0',
   PRIMARY KEY (`id`),
-  KEY `degree_id` (`degree_id`)  
+  KEY `degree_id` (`degree_id`),
+  KEY `major_code` (`major_code`),
+  KEY `exclude` (`exclude`),
+  KEY `allow_dynamic` (`allow_dynamic`),
+  KEY `degree_level` (`degree_level`),
+  KEY `degree_class` (`degree_class`),
+  KEY `catalog_year` (`catalog_year`)  
 );";
 db_query($q);
 
